Adding 202101 project files

--- a/website-content/themes/archie/layouts/partials/footer.html
+++ b/website-content/themes/archie/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <hr>
-  © {{ dateFormat "2006" now }} {{ with .Site.Copyright }} {{ . }}
+  © {{ dateFormat "2006" now }} {{ with .Site.Copyright }} <a href="/about/">{{ . }}</a>
   | {{ end }} Design forked from <a href="https://github.com/athul/archie">Archie Theme</a>
   | Built with <a href="https://gohugo.io">Hugo</a>
 </footer>
