--- a/website-content/themes/archie/layouts/partials/header.html
+++ b/website-content/themes/archie/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <header>
   <div class="main">
-    <img src="/images/drama-masks.png">
+    <img src="/images/drama-masks.png" alt="Drama masks">
     <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
   </div>
   <nav>
