--- a/website-content/themes/archie/static/css/main.css
+++ b/website-content/themes/archie/static/css/main.css
@@ -28,7 +28,8 @@ html {
   color: var(--fontcolor);
   background-color: var(--bgcolor);
   font-family: 'Roboto Mono', monospace;
-  line-height: 1.6em;
+  line-height: 1.7em;
+  font-size: 1.2em;
 }
 
 body {
@@ -141,7 +142,7 @@ pre code {
   margin-bottom: 4em;
   margin-left: auto;
   margin-right: auto;
-  max-width: 680px;
+  max-width: 780px;
   padding: 0 1ch;
   word-wrap: break-word;
 }
@@ -159,13 +160,13 @@ header img {
   vertical-align: middle;
 }
 header .main {
-  font-size: 1.5rem;
+  font-size: 1.5em;
 }
 
 /* Footer */
 footer {
   margin-top: 1em;
-  font-size: 0.8rem;
+  font-size: 0.8em;
 }
 
 /* Common */
