--- a/website-content/themes/archie/static/css/main.css
+++ b/website-content/themes/archie/static/css/main.css
@@ -160,13 +160,13 @@ header img {
   vertical-align: middle;
 }
 header .main {
-  font-size: 1.5em;
+  font-size: 1.5rem;
 }
 
 /* Footer */
 footer {
   margin-top: 1em;
-  font-size: 0.8em;
+  font-size: 0.8rem;
 }
 
 /* Common */
