--- a/website-content/themes/archie/static/css/main.css
+++ b/website-content/themes/archie/static/css/main.css
@@ -29,11 +29,12 @@ html {
   background-color: var(--bgcolor);
   font-family: 'Roboto Mono', monospace;
   line-height: 1.6em;
+  font-size: 1.2em;
 }
 
 body {
   display: block;
-  margin: 8px;
+  margin: 1em;
 }
 
 ::selection {
@@ -141,7 +142,7 @@ pre code {
   margin-bottom: 4em;
   margin-left: auto;
   margin-right: auto;
-  max-width: 680px;
+  max-width: 780px;
   padding: 0 1ch;
   word-wrap: break-word;
 }
